--- a/Localization/localization_ru.cfg
+++ b/Localization/localization_ru.cfg
@@ -4,7 +4,7 @@ ru
 {
 	#autoLOC_AirlockPlus00000 = Улучшенный атмосферный шлюз
 	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Board any available part\n[Ctrl+<<1>>] Select part to board
-	#autoLOC_AirlockPlusBP002 = В аппарат нет места.
+	#autoLOC_AirlockPlusBP002 = В аппарате нет места.
 	#autoLOC_AirlockPlusBP002c = Cannot board a full living space.
 	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Select a part to board\n[Esc]: отмена</color>
 	#autoLOC_AirlockPlusAP001 = Экипаж: <<1>>/<<2>>
