--- a/Localization/localization_ru.cfg
+++ b/Localization/localization_ru.cfg
@@ -3,10 +3,10 @@
 ru
 {
 	#autoLOC_AirlockPlus00000 = AirlockPlus
-	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Садиться в любую доступную деталь\n[Ctrl+<<1>>] Выберите деталь для посадки в аппарат
-	#autoLOC_AirlockPlusBP002 = Невозможно сесть: все места в аппарате заняты.
-	#autoLOC_AirlockPlusBP002c = Невозможно сесть: все места в этом жилом пространстве заняты.
-	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Выберите деталь для посадки в аппарат\n[Esc]: Отмена</color>
+	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Входить в любую доступную деталь\n[Ctrl+<<1>>] Выберите деталь для входа
+	#autoLOC_AirlockPlusBP002 = В аппарате нет места.
+	#autoLOC_AirlockPlusBP002c = В жилом модуле нет места.
+	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Выберите деталь для входа\n[Esc]: Отмена</color>
 	#autoLOC_AirlockPlusAP001 = Экипаж: <<1>>/<<2>>
 	#autoLOC_AirlockPlusAP002 = (Турист)
 	#autoLOC_AirlockPlusAP003 = EVA
