--- a/Localization/localization_ru.cfg
+++ b/Localization/localization_ru.cfg
@@ -5,7 +5,7 @@ ru
 	#autoLOC_AirlockPlus00000 = AirlockPlus
 	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Входить в любую доступную деталь\n[Ctrl+<<1>>] Выберите деталь для входа
 	#autoLOC_AirlockPlusBP002 = В аппарате нет места.
-	#autoLOC_AirlockPlusBP002c = В жилом модуле нет места.
+	#autoLOC_AirlockPlusBP002c = В жилом отсеке нет места.
 	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Выберите деталь для входа\n[Esc]: Отмена</color>
 	#autoLOC_AirlockPlusAP001 = Экипаж: <<1>>/<<2>>
 	#autoLOC_AirlockPlusAP002 = (Турист)
