--- a/Localization/localization_es-es.cfg
+++ b/Localization/localization_es-es.cfg
@@ -3,10 +3,10 @@
 es-es
 {
 	#autoLOC_AirlockPlus00000 = EsclusaPlus
-	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Abordar alguna parte disponible\n[Ctrl+<<1>>] Selecciona parte a abordar
+	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Abordar alguna pieza disponible\n[Ctrl+<<1>>] Selecciona pieza a abordar
 	#autoLOC_AirlockPlusBP002 = No se puede abordar una nave lleno.
 	#autoLOC_AirlockPlusBP002c = No se puede abordar un espacio habitable lleno.
-	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Selecciona una parte para abordar\n[Esc]: Cancelar</color>
+	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Selecciona una pieza para abordar\n[Esc]: Cancelar</color>
 	#autoLOC_AirlockPlusAP001 = Tripulación: <<1>>/<<2>>
 	#autoLOC_AirlockPlusAP002 = (Turista)
 	#autoLOC_AirlockPlusAP003 = EVA
