--- a/Localization/localization_ru.cfg
+++ b/Localization/localization_ru.cfg
@@ -9,6 +9,6 @@ ru
 	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Выберите деталь для входа\n[Esc]: Отмена</color>
 	#autoLOC_AirlockPlusAP001 = Экипаж: <<1>>/<<2>>
 	#autoLOC_AirlockPlusAP002 = (Турист)
-	#autoLOC_AirlockPlusAP003 = EVA
+	#autoLOC_AirlockPlusAP003 = Выйти
 }
 }
