--- a/Localization/localization_de-de.cfg
+++ b/Localization/localization_de-de.cfg
@@ -3,10 +3,10 @@
 de-de
 {
 	#autoLOC_AirlockPlus00000 = LuftschleusePlus
-	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Irgendeine verfügbaren Teil betreten werden\n[Ctrl+<<1>>] Wähle ein Teil aus, auf das Kerbal betreten werden sollen
-	#autoLOC_AirlockPlusBP002 = Ein volles raumfahrzeug kann nicht betreten werden.
-	#autoLOC_AirlockPlusBP002c = Ein volles bewohnbarer raum kann nicht betreten werden.
-	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Wähle ein Teil aus, auf das Kerbal betreten werden sollen\n[Esc]: Abbrechen</color>
+	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Ein beliebiges Teil betreten\n[Ctrl+<<1>>] Wähle ein Teil zum Betreten aus
+	#autoLOC_AirlockPlusBP002 = Ein volles Raumfahrzeug kann nicht betreten werden.
+	#autoLOC_AirlockPlusBP002c = Ein voller Wohnraum kann nicht betreten werden.
+	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Wähle ein Teil zum Betreten aus\n[Esc]: Abbrechen</color>
 	#autoLOC_AirlockPlusAP001 = Crew: <<1>>/<<2>>
 	#autoLOC_AirlockPlusAP002 = (Tourist)
 	#autoLOC_AirlockPlusAP003 = EVA
