--- a/Localization/localization_pt-br.cfg
+++ b/Localization/localization_pt-br.cfg
@@ -4,8 +4,8 @@ pt-br
 {
 	#autoLOC_AirlockPlus00000 = EscotilhaPlus
 	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Embarcar qualquer parte disponível\n[Ctrl+<<1>>] Selecione peça a embarcar
-	#autoLOC_AirlockPlusBP002 = Não é possível embarcar num nave cheio.
-	#autoLOC_AirlockPlusBP002c = Não é possível embarcar num sala habitável cheio.
+	#autoLOC_AirlockPlusBP002 = Não é possível embarcar numa nave cheia.
+	#autoLOC_AirlockPlusBP002c = Não é possível embarcar numa sala habitável cheia.
 	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Selecione uma peça para embarcar\n[Esc]: Cancelar</color>
 	#autoLOC_AirlockPlusAP001 = Tripulação: <<1>>/<<2>>
 	#autoLOC_AirlockPlusAP002 = (Turista)
