--- a/Localization/localization_fr-fr.cfg
+++ b/Localization/localization_fr-fr.cfg
@@ -3,9 +3,9 @@
 fr-fr
 {
 	#autoLOC_AirlockPlus00000 = AirlockPlus
-	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Embarquez n'importe quel pièce disponible\n[Ctrl+<<1>>] Choisir une pièce où embarquer
-	#autoLOC_AirlockPlusBP002 = Impossible d'embarquer dans un vaisseau plein.
-	#autoLOC_AirlockPlusBP002c = Impossible d'embarquer dans une chambre habitable plein.
+	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Embarquer n'importe quel pièce disponible\n[Ctrl+<<1>>] Choisir une pièce où embarquer
+	#autoLOC_AirlockPlusBP002 = Impossible d'embarquer dans un vaisseau complet.
+	#autoLOC_AirlockPlusBP002c = Impossible d'embarquer dans un espace de vie complet.
 	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Choisir une pièce où embarquer\n[Échap] : Annuler</color>
 	#autoLOC_AirlockPlusAP001 = Équipage: <<1>>/<<2>>
 	#autoLOC_AirlockPlusAP002 = (Touriste)
