--- a/Localization/localization_it-it.cfg
+++ b/Localization/localization_it-it.cfg
@@ -3,10 +3,10 @@
 it-it
 {
 	#autoLOC_AirlockPlus00000 = AirlockPlus
-	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Salire a bordo qualsiasi parte disponibile\n[Ctrl+<<1>>] Seleziona parte a salire a bordo
+	#autoLOC_AirlockPlusBP001 = [Shift+<<1>>] Entra in una parte qualsiasi\n[Ctrl+<<1>>] Seleziona una parte per entrarci
 	#autoLOC_AirlockPlusBP002 = Impossibile salire a bordo di un veicolo pieno.
-	#autoLOC_AirlockPlusBP002c = Impossibile salire a bordo di un spazio abitabili pieno.
-	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Seleziona una parte in cui salire a bordo\n[Esc]: Annulla</color>
+	#autoLOC_AirlockPlusBP002c = Impossibile salire a bordo di uno spazio abitabile pieno.
+	#autoLOC_AirlockPlusBP003 = <color=<<1>>>Seleziona una parte per entrarci\n[Esc]: Annulla</color>
 	#autoLOC_AirlockPlusAP001 = Equipaggio: <<1>>/<<2>>
 	#autoLOC_AirlockPlusAP002 = (Turista)
 	#autoLOC_AirlockPlusAP003 = EVA
